@@ -284,6 +284,15 @@ m4_define([AH_OUTPUT], [])
 # output as is, with no formating.
 m4_define([AH_VERBATIM],
 [AS_LITERAL_IF([$1],
+               [AH_OUTPUT([$1], AS_ESCAPE([[$2]]))])
+])
+
+
+# _AH_VERBATIM_OLD(KEY, TEMPLATE)
+# -------------------------------
+# Same as above, but with bugward compatibility.
+m4_define([_AH_VERBATIM_OLD],
+[AS_LITERAL_IF([$1],
                [AH_OUTPUT([$1], _AS_QUOTE([[$2]]))])
 ])
 
@@ -295,6 +304,15 @@ m4_define([AH_VERBATIM],
 m4_define([AH_TEMPLATE],
 [AH_VERBATIM([$1],
              m4_text_wrap([$2 */], [   ], [/* ])[
+#undef $1])])
+
+
+# _AH_TEMPLATE_OLD(KEY, DESCRIPTION)
+# ----------------------------------
+# Same as above, but with bugward compatibility.
+m4_define([_AH_TEMPLATE_OLD],
+[_AH_VERBATIM_OLD([$1],
+                  m4_text_wrap([$2 */], [   ], [/* ])[
 #undef $1])])
 
 
@@ -2045,7 +2063,7 @@ m4_define([AC_DEFINE_TRACE],
 # die.  The third argument is used by autoheader.
 m4_define([AC_DEFINE],
 [AC_DEFINE_TRACE([$1])dnl
-m4_ifval([$3], [AH_TEMPLATE([$1], [$3])])dnl
+m4_ifval([$3], [_AH_TEMPLATE_OLD([$1], [$3])])dnl
 cat >>confdefs.h <<\EOF
 [@%:@define] $1 m4_if($#, 2, [$2], $#, 3, [$2], 1)
 EOF
@@ -2057,7 +2075,7 @@ EOF
 # Similar, but perform shell substitutions $ ` \ once on VALUE.
 m4_define([AC_DEFINE_UNQUOTED],
 [AC_DEFINE_TRACE([$1])dnl
-m4_ifval([$3], [AH_TEMPLATE([$1], [$3])])dnl
+m4_ifval([$3], [_AH_TEMPLATE_OLD([$1], [$3])])dnl
 cat >>confdefs.h <<EOF
 [@%:@define] $1 m4_if($#, 2, [$2], $#, 3, [$2], 1)
 EOF
